# ClamApp

./: .gitignore  INSTALL_POLICY.md  LICENSE  README.md  UFW_FIX_SUMMARY.md  V1_RELEASE_READY.md  agents.md  app_data.json  clamapp.desktop  com.clamapp.policy  com.clamapp.ufw.policy  main.py  phase.md  pyproject.toml  requirements.txt  setup.py
assets/icons/: .gitkeep
docs/policykit/: README.md  clamapp-ufw.policy
features_archive/: audit_view.py  security_audit.py  startup_view.py  task_manager.py  task_manager_view.py
scripts/: init_local_storage.py
src/: version.py
src/backend/: breach_checker.py  breach_engine.py  clam_wrapper.py  config_manager.py  crypto_vault.py  data_manager.py  data_shredder.py  firewall_manager.py  logging_setup.py  privacy_shield.py  vt_service.py
src/clamapp/: __init__.py  __main__.py
src/gui/: app_manager_view.py  audit_view.py  breach_checker_view.py  cipher_view.py  cleaner_view.py  cloud_scan_view.py  firewall_view.py  hash_tool_view.py  main_window.py  network_monitor_thread.py  network_view.py  password_gen_view.py  privacy_view.py  scanner_thread.py  schedule_view.py  shredder_view.py  translations.py  vault_view.py
src/modules/: app_manager.py  scheduler_logic.py  security_audit.py  startup_manager.py  system_cleaner.py  usb_guardian.py
src/utils/: logger.py
tests/: test_network_monitor.py  test_scanner.py  test_security_tools.py
